# fracton

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  DOCKER.md  Dockerfile  INGESTION_PIPELINE.md  KNOWLEDGE_GRAPH_V2_COMPLETE.md  KRONOS_V2_IMPLEMENTATION.md  KRONOS_V2_SOUL_ANALYSIS.md  README.md  ROADMAP.md  SETUP.md  SPEC.md  STATUS.md  docker-compose.yml  meta.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py  test_memory_fix.py
.changelog/: 20251229_155000_backend_integration_complete.md  20251229_163000_real_embeddings_integration.md  20251229_181400_gpu_performance_testing.md  20251229_190000_theoretical_foundations_rebuild.md  20251229_200000_comprehensive_testing_complete.md  20251229_210000_foundation_integration_complete.md  20251229_220000_enhanced_metrics_complete.md  20251229_230000_option3_polish_complete.md  20251229_240000_docker_chatbot_complete.md  20251229_250000_chatbot_memory_improvements.md  20251229_260000_production_cleanup.md  20251231_213000_kronos_agent_added.md  20260114_101500_kronos_v2_spec_update.md
.cip/: core.yaml  instructions_v2.0.yaml  meta.yaml
.github/workflows/: cip-metadata-update.yml  cip-validation.yml
.spec/: shadowpuppet.spec.md
cognition/: meta.yaml
docs/: API_REFERENCE.md  IMPLEMENTATION_CHECKLIST.md  MOBIUS_QUICKSTART.md  QUICK_REFERENCE.md  README.md  REALITY_ENGINE_INTEGRATION.md  REALITY_ENGINE_INTEGRATION_SUMMARY.md  SEC_OPERATOR_SUMMARY.md
examples/: kronos_demo.py  meta.yaml  mobius_substrate_demo.py  mobius_thermodynamics_demo.py  pac_native_demo.py  test_kronos_v2_tree.py
examples/chatbot/: Dockerfile  README.md  agent_chatbot.py  chatbot.py  chatbot_test.py  run.sh  web_chatbot.py
fracton/: __init__.py  backend.py  fibonacci.py  meta.yaml
fracton/cascade/: __init__.py  analysis.py  engine.py
fracton/constants/: __init__.py  mathematical.py  physical.py  (+1 more)
gaia/: meta.yaml
roadmaps/: fracton_roadmap.md  meta.yaml
scripts/: analyze_ingested_concepts.py  build_concept_relationships.py  build_dft_knowledge_expanded.py  build_dft_knowledge_graph.py  build_dft_knowledge_graph_simple.py  extract_concepts_from_paper.py  ingest_concept.py  ingest_repo.py  ingest_repo_semantic.py  run_backend_tests.py  test_dft_knowledge.py  test_expanded_graph.py  test_ingestion.py  visualize_dft_graph.py
tests/: README.md  TESTING_GUIDE.md  TESTING_REPORT.md  __init__.py  conftest.py  meta.yaml  run_tests.py  test_api.py  test_bifractal_trace.py  test_cascade.py  test_constants.py  test_corrections.py  test_cosmology.py  test_enhanced_metrics.py  test_entropy_dispatch.py  test_experiment.py  test_feigenbaum.py  test_foundations.py  test_foundations_extended.py  test_foundations_integration.py  test_foundations_performance.py  test_gauge.py  test_gpu_efficiency.py  test_gpu_performance.py  test_kronos_integration_complete.py  test_kronos_memory.py  test_lang.py  test_med_compliance.py  test_memory_field.py  test_mobius_tensor.py  test_number_theory.py  test_physics_decorators.py  test_physics_plugin.py  test_projections.py  test_recursive_engine.py  test_relativity.py  test_sec_compliance.py  test_sec_evolution.py  test_statistics.py  test_validation.py
todo/: fracton_todo.md  meta.yaml
(+171 files in other folders)
