[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fracton"
version = "2.0.0a3"
description = "Dawn Field Theory computational SDK — PAC/SEC/MED math, physics operators, and recursive infrastructure"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Dawn Field Institute", email = "research@dawnfield.institute"},
]
keywords = [
    "physics", "infodynamics", "fibonacci", "golden-ratio",
    "pac", "sec", "med", "recursion", "entropy", "field-theory",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.0.0",
    "hypothesis>=6.70.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
]
gpu = [
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/dawnfield-institute/fracton"
Repository = "https://github.com/dawnfield-institute/fracton"
Issues = "https://github.com/dawnfield-institute/fracton/issues"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*", "examples", "scripts", "data", "docs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "sec_compliance: tests for SEC (Symbolic Entropy Collapse) compliance",
    "med_compliance: tests for MED (Macro Emergence Dynamics) compliance",
    "bifractal_symmetry: tests for bifractal temporal symmetry",
    "recursive_balance: tests for recursive balance field principles",
    "performance: performance benchmarks and scaling tests",
    "integration: integration tests across components",
    "foundational_theory: tests validating foundational Dawn Field Theory principles",
    "constants: tests validating physical and mathematical constants",
    "physics: tests for physics operators and formulas",
]
addopts = "--strict-markers --tb=short -v"
timeout = 300

[tool.coverage.run]
source = ["fracton"]
omit = ["*/tests/*", "*/test_*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
fail_under = 85

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
